add template for login screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello">Hello</string>
+    <string name="login_form_username_hint">username</string>
+    <string name="login_form_password_hint">password</string>
 </resources>
