--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello">Hello</string>
     <string name="login_form_username_hint">username</string>
     <string name="login_form_password_hint">password</string>
+    <string name="login">Login</string>
 </resources>
